# n-digit-calculator

./: CMakeLists.txt  README.md  main.cpp
includes/: add.h  arithmetic.h  io.h  math.h  multiply.h  mylib.h
src/: add.cpp  arithmetic.cpp  io.cpp  math.cpp  multiply.cpp
